[package]
name = "taiko"
version = "1.0.0"
edition = "2021"
authors = ["Harsh Pratap Singh"]
description = "A CLI tool for generating AI prompts from your codebase"
license = "MIT"
readme = "README.md"
repository = "https://github.com/harsh-ps-2003/taiko"

[[bin]]
name = "taiko"
path = "src/main.rs"

[workspace]
members = ["prompt-macro"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
ignore = "0.4"
indicatif = "0.17"
serde_json = "1.0"
termtree = "0.4"
tiktoken-rs = "0.5"
prompt-macro = { path = "./prompt-macro" }

[profile.release]
lto = "thin"
panic = 'abort'
codegen-units = 1
opt-level = 3
strip = true
